--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,4 +18,8 @@ License: Artistic-2.0
 Collate: ProteomicsAnnotationHubData.R
 	 utils.R
 	 makePXD000001.R
+	 makePride_msnset.R
+         makePride_mzid.R
+         makePride_mzML.R
+         makePride_fasta.R
 	 zzz.R
