--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,8 @@ Suggests: knitr, BiocStyle, rmarkdown
 biocViews: DataImport, Proteomics
 VignetteBuilder: knitr
 License: Artistic-2.0
+URL: https://github.com/lgatto/ProteomicsAnnotationHubData
+BugReports: https://github.com/lgatto/ProteomicsAnnotationHubData/issues
 Collate: ProteomicsAnnotationHubData.R
 	 utils.R
 	 PXD000001.R
