--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,9 @@ import("mzR")
 import("Biostrings")
 import("GenomeInfoDb")
 
+importFrom("Biobase", "addVigs2WinMenu")
+importFrom("BiocInstaller", "biocVersion")
+
 importFrom("utils",
            "packageDescription", "vignette", "download.file")
 
