also enable to get a list of all relevant experiments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,5 @@ importFrom("BiocInstaller", "biocVersion")
 importFrom("utils",
            "packageDescription", "vignette", "download.file")
 
-export(ProteomicsAnnotationHubData)
+export(ProteomicsAnnotationHubData,
+       availableProteomicsAnnotationHubData)
