requires version 2.1.32 of AnnotationHub

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Maintainer: Laurent Gatto <lg390@cam.ac.uk>
 Description: These recipes convert a variety and a growing number of
              public proteomics data sets into easily-used standard
              Bioconductor data structures.
-Depends: AnnotationHub, AnnotationHubData
+Depends: AnnotationHub (>= 2.1.32), AnnotationHubData
 Imports: mzR, MSnbase, Biostrings, GenomeInfoDb, utils, Biobase,
          BiocInstaller
 Suggests: knitr, BiocStyle, rmarkdown, testthat
