--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Maintainer: Laurent Gatto <lg390@cam.ac.uk>
 Description: These recipes convert a variety and a growing number of
              public proteomics data sets into easily-used standard
              Bioconductor data structures.
-Depends: AnnotationHub (>= 2.1.45), AnnotationHubData
+Depends: AnnotationHub (>= 2.1.45), AnnotationHubData, curl
 Imports: mzR (>= 2.3.2), MSnbase, Biostrings, GenomeInfoDb, utils, Biobase,
          BiocInstaller
 Suggests: knitr, BiocStyle, rmarkdown, testthat
