Major rewrite of the data preparation
  Now relying on simple dcf files as input and intermediate PAHD objects.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,5 +13,12 @@ importFrom("utils", "packageVersion", "packageDescription",
            "vignette", "download.file")
 
 export(ProteomicsAnnotationHubData,
+       makeAnnotationHubMetadata,
        writePahdTemplate,
-       availableProteomicsAnnotationHubData)
+       readPahdFiles,
+       PAHD,
+       availableProteomicsAnnotationHubData,
+       proteomicsAnnotationHubDataResources,
+       identicalRemLoc)
+
+exportClasses(PAHD)
