--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ import("Biostrings")
 import("GenomeInfoDb")
 
 importFrom("Biobase", "addVigs2WinMenu")
-importFrom("BiocInstaller", "biocVersion")
+importFrom("BiocManager", "version")
 
 importFrom("utils", "packageVersion", "packageDescription",
            "vignette", "download.file", "read.table")
